[Bug Fixed]: Brand Messages Time Field alignment change

--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -249,6 +249,10 @@
     color: #666666;
 }
 
+.offer-header .offer-time {
+    padding-top: 16px;
+}
+
 .offer-body {
     padding-left: 158px;
     margin-top: 20px;
